crates/pg_syntax/tests/snapshots/postgres_regress/roleattributes@4.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT rolname, rolsuper, rolinherit, rolcreaterole, rolcreatedb, rolcanlogin, rolreplication, rolbypassrls, rolconnlimit, rolpassword, rolvaliduntil FROM pg_authid WHERE rolname = 'regress_test_superuser';"
---
SelectStmt@0..206
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..14
    ColumnRef@7..14
      Ident@7..14 "rolname"
  Ascii44@14..15 ","
  Whitespace@15..16 " "
  ResTarget@16..24
    ColumnRef@16..24
      Ident@16..24 "rolsuper"
  Ascii44@24..25 ","
  Whitespace@25..26 " "
  ResTarget@26..36
    ColumnRef@26..36
      Ident@26..36 "rolinherit"
  Ascii44@36..37 ","
  Whitespace@37..38 " "
  ResTarget@38..51
    ColumnRef@38..51
      Ident@38..51 "rolcreaterole"
  Ascii44@51..52 ","
  Whitespace@52..53 " "
  ResTarget@53..64
    ColumnRef@53..64
      Ident@53..64 "rolcreatedb"
  Ascii44@64..65 ","
  Whitespace@65..66 " "
  ResTarget@66..77
    ColumnRef@66..77
      Ident@66..77 "rolcanlogin"
  Ascii44@77..78 ","
  Whitespace@78..79 " "
  ResTarget@79..93
    ColumnRef@79..93
      Ident@79..93 "rolreplication"
  Ascii44@93..94 ","
  Whitespace@94..95 " "
  ResTarget@95..107
    ColumnRef@95..107
      Ident@95..107 "rolbypassrls"
  Ascii44@107..108 ","
  Whitespace@108..109 " "
  ResTarget@109..121
    ColumnRef@109..121
      Ident@109..121 "rolconnlimit"
  Ascii44@121..122 ","
  Whitespace@122..123 " "
  ResTarget@123..134
    ColumnRef@123..134
      Ident@123..134 "rolpassword"
  Ascii44@134..135 ","
  Whitespace@135..136 " "
  ResTarget@136..149
    ColumnRef@136..149
      Ident@136..149 "rolvaliduntil"
  Whitespace@149..150 " "
  From@150..154 "FROM"
  Whitespace@154..155 " "
  RangeVar@155..164
    Ident@155..164 "pg_authid"
  Whitespace@164..165 " "
  Where@165..170 "WHERE"
  Whitespace@170..171 " "
  AExpr@171..205
    ColumnRef@171..178
      Ident@171..178 "rolname"
    Whitespace@178..179 " "
    Ascii61@179..180 "="
    Whitespace@180..181 " "
    AConst@181..205
      Sconst@181..205 "'regress_test_superuser'"
  Ascii59@205..206 ";"

