crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@108.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select row(1, 2)::testtype1 <> row(1, 'abc')::testtype3;"
---
SelectStmt@0..56
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..55
    AExpr@7..55
      TypeCast@7..27
        RowExpr@7..15
          Row@7..10 "row"
          Ascii40@10..11 "("
          AConst@11..12
            Iconst@11..12 "1"
          Ascii44@12..13 ","
          Whitespace@13..14 " "
          AConst@14..15
            Iconst@14..15 "2"
        Ascii41@15..16 ")"
        Typecast@16..18 "::"
        TypeName@18..27
          Ident@18..27 "testtype1"
      Whitespace@27..28 " "
      NotEquals@28..30 "<>"
      Whitespace@30..31 " "
      TypeCast@31..55
        RowExpr@31..43
          Row@31..34 "row"
          Ascii40@34..35 "("
          AConst@35..36
            Iconst@35..36 "1"
          Ascii44@36..37 ","
          Whitespace@37..38 " "
          AConst@38..43
            Sconst@38..43 "'abc'"
        Ascii41@43..44 ")"
        Typecast@44..46 "::"
        TypeName@46..55
          Ident@46..55 "testtype3"
  Ascii59@55..56 ";"

