crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@111.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select row(1, 2)::testtype1 <> row(1)::testtype5;"
---
SelectStmt@0..49
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..48
    AExpr@7..48
      TypeCast@7..27
        RowExpr@7..15
          Row@7..10 "row"
          Ascii40@10..11 "("
          AConst@11..12
            Iconst@11..12 "1"
          Ascii44@12..13 ","
          Whitespace@13..14 " "
          AConst@14..15
            Iconst@14..15 "2"
        Ascii41@15..16 ")"
        Typecast@16..18 "::"
        TypeName@18..27
          Ident@18..27 "testtype1"
      Whitespace@27..28 " "
      NotEquals@28..30 "<>"
      Whitespace@30..31 " "
      TypeCast@31..48
        RowExpr@31..36
          Row@31..34 "row"
          Ascii40@34..35 "("
          AConst@35..36
            Iconst@35..36 "1"
        Ascii41@36..37 ")"
        Typecast@37..39 "::"
        TypeName@39..48
          Ident@39..48 "testtype5"
  Ascii59@48..49 ";"

